--- a/overlay/packages/apps/Settings/res/layout/lockscreen_targets.xml
+++ b/overlay/packages/apps/Settings/res/layout/lockscreen_targets.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:prvandroid="http://schemas.android.com/apk/prv/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_light"
-        android:layout_margin="8dip"
-        android:padding="4dip"
-        android:gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/lockscreen_target_info" />
+    android:layout_height="match_parent">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+    <LinearLayout
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical">
+
+	<TextView
+	    android:layout_width="match_parent"
+   	    android:layout_height="wrap_content"
+            android:background="@android:color/holo_blue_light"
+            android:layout_margin="8dip"
+            android:padding="4dip"
+            android:gravity="center_horizontal"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/lockscreen_target_info" />
+
+    </LinearLayout>
 
     <com.android.internal.widget.multiwaveview.MultiWaveView
         android:id="@+id/lock_target"
         android:layout_width="match_parent"
-        android:layout_weight="25"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         prvandroid:targetDrawables="@*android:array/lockscreen_targets_with_camera"
         prvandroid:targetDescriptions="@*android:array/lockscreen_target_descriptions_with_camera"
         prvandroid:directionDescriptions="@*android:array/lockscreen_direction_descriptions"
@@ -38,4 +39,5 @@
         prvandroid:verticalOffset="0dp"
         prvandroid:feedbackCount="3"
         prvandroid:vibrationDuration="20" />
-</LinearLayout>
+
+</RelativeLayout>
